[gd_scene load_steps=4 format=3 uid="uid://hucphy0bpsai"]

[ext_resource type="Theme" uid="uid://bilsq7fjihupe" path="res://Assets/Themes/placeHolderTheme/placeholderTheme.tres" id="1_fflt5"]
[ext_resource type="Script" path="res://Assets/Scripts/Main/titleScreen.gd" id="2_5k3gk"]
[ext_resource type="Texture2D" uid="uid://dwucn2msgpmkb" path="res://Assets/Images/title.png" id="3_xujx4"]

[node name="titleScreen" type="Control" node_paths=PackedStringArray("blackOverlay", "fadeTimer", "buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fflt5")
script = ExtResource("2_5k3gk")
entryScene = "res://Assets/Scenes/main.tscn"
blackOverlay = NodePath("blackscreen")
fadeTimer = NodePath("timer")
loadCheckDelay = 0.2
buttons = [NodePath("mainButtons/vBoxContainer/Enter Cafe"), NodePath("mainButtons/vBoxContainer/Settings"), NodePath("mainButtons/vBoxContainer/Exit Game")]

[node name="comfyCafe!!!!" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xujx4")

[node name="settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1073.0
offset_top = -673.0
offset_right = -56.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0

[node name="settings" type="PanelContainer" parent="settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="settings/settings"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Settings"
horizontal_alignment = 1

[node name="hBoxContainer" type="HBoxContainer" parent="settings"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -79.0
grow_horizontal = 2
grow_vertical = 0

[node name="button" type="Button" parent="settings/hBoxContainer"]
layout_mode = 2
text = "<"

[node name="mainButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -954.0
offset_top = -476.0
offset_right = -162.0
offset_bottom = -136.0
grow_horizontal = 0
grow_vertical = 0

[node name="vBoxContainer" type="VBoxContainer" parent="mainButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Enter Cafe" type="Button" parent="mainButtons/vBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 55
text = "Enter Cafe"

[node name="Settings" type="Button" parent="mainButtons/vBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 55
text = "Settings"

[node name="Exit Game" type="Button" parent="mainButtons/vBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 55
text = "Close Game"

[node name="progressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -701.5
offset_top = 57.0
offset_right = 701.5
offset_bottom = 134.0
grow_horizontal = 2

[node name="blackscreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="timer" type="Timer" parent="."]
one_shot = true

[node name="loadCheck" type="Timer" parent="."]

[connection signal="gui_input" from="comfyCafe!!!!" to="." method="_on_texture_rect_gui_input" flags=18]
[connection signal="pressed" from="mainButtons/vBoxContainer/Enter Cafe" to="." method="_on_enter_cafe_pressed"]
[connection signal="pressed" from="mainButtons/vBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainButtons/vBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
[connection signal="gui_input" from="blackscreen" to="." method="_on_blackscreen_gui_input"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="loadCheck" to="." method="_on_load_check_timeout"]
